# vantage-docs

./: .cspell.json  .cspell.yaml  .gitignore  .gitmodules  .opencode-state.json  AGENTS.md  DOCSEARCH_SETUP.md  Makefile  README.md  cdk.context.json  docusaurus.config.backup.js  docusaurus.config.js  index.ts  justfile  package-lock.json  package.json  pyproject.toml  sidebars-main.js  static-site.ts  tsconfig.json  vantage-documentation.md
.cspell/: omnivector-dictionary.txt  vantage-dictionary.txt
.github/: ARCHITECTURE.md  CODING_STANDARDS.md  CONTRIBUTING.md  DEVELOPMENT.md  PULL_REQUEST_TEMPLATE.md  README.md  copilot-chat.md  copilot-instructions.md  copilot-workspace.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: storage-clusters-restructure.md
.github/workflows/: build-on-push.yaml  deploy-on-dispatch.yaml  deploy-to-staging.yaml  deploy.yml  pages.yml
docs/: changelog.md  glossary.md  index.md  support.md
docs-api/: docs.md  index.md  openapi.md  openapi.yaml  postman.md  sidebar.js
docs-cli/: index.md  sidebar.js
docs-cli/command-reference/: index.md
docs-cli/configuration/: index.md
docs-cli/installation/: index.md
docs-platform/: index.md  sidebar.js
docs-platform-overview/: index.md  sidebar.js
docs-sdk/: index.md  sidebar.js
scripts/: migrate-doc-links.js  restore-cli-links.js  sync-cli-docs.js  transform-cli-links.js
src/: globalMDXComponents.js  rehypeLinkRewrite.js  rehypeTabsTransform.js  remarkThemeImports.js
src/css/: custom.css  (+4 more)
(+420 files in other folders)
